Most of the formatting and flexbox is complete.
Time to hone each individual section to better match
the desired outcome.

--- a/index.html
+++ b/index.html
@@ -22,25 +22,25 @@
             </ul>
 
         </div>
+    </div>
 
-        <div class="herobox">
-            <div class="hero">
+    <div class="herobox">
+        <div class="hero">
 
-                
-                <div class="herotext"> This website is awesome</div>
-                <div class="herosubtext">This website has some subtext that goes under
-                    the main title. It's a smaller font and the color is lower in contrast.
-                </div>
-                <div class="herosignup">Sign up</div>
+            
+            <div class="herotext"> This website is awesome</div>
+            <div class="herosubtext">This website has some subtext that goes under
+                the main title. It's a smaller font and the color is lower in contrast.
             </div>
+            <div class="herosignup">Sign up</div>
+        </div>
 
-            <div class="heroimg">
-                this is a placeholder
+        <div class="heroimg">
+            this is a placeholder
 
-
-            </div>
 
         </div>
+
     </div>
 
     <div class="main">
@@ -82,7 +82,7 @@
             </div>
 
             <div class="calltime">
-                <div class="">Call to action! It's time!</div>
+                <div class="calltext">Call to action! It's time!</div>
                 <div>Sign up for our product by clicking that button over there!</div>
                 <div class="signupbutton">Sign up!</div>
             </div>
