Finished edditing to a satisfactory level.
Happy to finish there.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awesome Site</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+<style>
+    body {
+    font-family: "Roboto", serif;
+    }
+</style>
 </head>
 
 <body>
@@ -32,7 +38,7 @@
             <div class="herosubtext">This website has some subtext that goes under
                 the main title. It's a smaller font and the color is lower in contrast.
             </div>
-            <div class="herosignup">Sign up</div>
+            <div class="herosignup"><a href="">Sign up</a></div>
         </div>
 
         <div class="heroimg">
@@ -82,11 +88,16 @@
 
 
             </div>
+            <div class="callup">
 
-            <div class="calltime">
-                <div class="calltext">Call to action! It's time!</div>
-                <div>Sign up for our product by clicking that button over there!</div>
-                <div class="signupbutton">Sign up!</div>
+                <div class="calltime">
+                    <div>
+
+                        <div class="calltext">Call to action! It's time!</div>
+                        <div>Sign up for our product by clicking that button over there!</div>
+                    </div>
+                        <div class="signupbutton">Sign up!</div>
+                </div>
             </div>
 
 
