Minor updates. All done

--- a/index.html
+++ b/index.html
@@ -84,19 +84,20 @@
                     Maybe it's just filling up space, or maybe people will actually
                     read it. Who knows? All I know is that it looks nice.
                 </div>
-                <div class="quoteby">Thor, God of Thunder</div>
+                <div class="quoteby">-Thor, God of Thunder</div>
 
 
             </div>
             <div class="callup">
 
                 <div class="calltime">
-                    <div>
+                    <div class="callbox">
 
                         <div class="calltext">Call to action! It's time!</div>
                         <div>Sign up for our product by clicking that button over there!</div>
+                    
                     </div>
-                        <div class="signupbutton">Sign up!</div>
+                    <div class="signupbutton">Sign up!</div>
                 </div>
             </div>
 
